# fsprj2

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  README.txt
libiotrace/: .gitignore  CMakeLists.txt  README.md  README.txt  docker-compose.yml  prometheus.yml
libiotrace/cmake/: AddGitSubModule.cmake  CheckCompilerAttributes.cmake  CheckRDTSC.cmake
libiotrace/ext/: CMakeLists.txt
libiotrace/include/: libiotrace.h  libiotrace_config.h.in
libiotrace/misc/: commands.txt  fnres_generate_consts_for_switchcase.py  fnres_todos.txt
libiotrace/scripts/: .gitignore
libiotrace/scripts/attic/testscripts/: libiotracetest.sh  performance_test.sh  runsondbnode.sh
libiotrace/scripts/compile/: gen_stracing_syscalls_table.py
libiotrace/scripts/dev/: gen_fnres_fctname_consts.py
libiotrace/scripts/influx-helper/: cleanup_influx.sh  full_dump.sh  run_influx.sh  setup_influx.sh
libiotrace/scripts/performance-code/: CMakeLists.txt  main.c
libiotrace/scripts/shelly-to-influx/: .env.example  main.py
libiotrace/scripts/testscripts/: .gitignore  README.md  build_InfluxDB.sh  build_OpenFoam.sh  config.sample  influx_in_interactive_session  libiotracetest.sh  manage_db_and_worker_nodes.sh  mpi_file_io.sh  mpi_file_io_2.sh  mpi_file_io_random.sh  openFOAM_motorBike.sh  performance_test.sh  posix_file_io_random.sh  runs_on_db_node.sh  runsondbnode.sh  start.sh  whitelist
libiotrace/scripts/testscripts/config/: code_saturne  config.sample  config_2023-11-23_10_49_1700732946  config_2023-11-23_11_45_04  config_2023-11-30_13_52_19  config_2023-11-30_18_49_52  config_2023-12-01_20_11_32  gcc_mpi  influxdb  openfoam  openfoam_com_1812  openfoam_com_2106  openfoam_org_12  openfoam_org_7  partitions  salome  scotch  test_code_saturne_mesh_cube  test_code_saturne_mesh_cube_2_worker_mpi_collective  test_code_saturne_mesh_cube_2_worker_mpi_collective_measurement  test_code_saturne_mesh_cube_2_worker_mpi_noncollective  test_code_saturne_mesh_cube_2_worker_mpi_noncollective_measurement  test_code_saturne_mesh_cube_4_worker_mpi_collective  test_code_saturne_mesh_cube_4_worker_mpi_noncollective  test_mpi_file_io  test_mpi_file_io_2  test_mpi_parallel_io_posix  test_openFOAM_VirgilioRe22Pr7_Perfomance_16_worker  test_openFOAM_VirgilioRe22Pr7_Perfomance_16_worker_measurement  test_openFOAM_VirgilioRe22Pr7_Perfomance_1_worker  test_openFOAM_VirgilioRe22Pr7_Perfomance_1_worker_all_posix  test_openFOAM_VirgilioRe22Pr7_Perfomance_1_worker_measurement  test_openFOAM_VirgilioRe22Pr7_Perfomance_2_worker  test_openFOAM_VirgilioRe22Pr7_Perfomance_2_worker_measurement  test_openFOAM_VirgilioRe22Pr7_Perfomance_4_worker  test_openFOAM_VirgilioRe22Pr7_Perfomance_4_worker_measurement  test_openFOAM_VirgilioRe22Pr7_Perfomance_8_worker  test_openFOAM_VirgilioRe22Pr7_Perfomance_8_worker_measurement  test_openFOAM_motorBike  test_posix_file_io_random  (+1 more)
libiotrace/scripts/testscripts/install/: build_InfluxDB.sh  build_OpenFoam.sh  build_and_configure_all.sh  build_code_saturne.sh  build_salome.sh  mesh_cube_xyz.py  setup_s64_n1_c1_1p0.xml
libiotrace/scripts/testscripts/postprocess/: patch_performance_test_file.py
libiotrace/scripts/testscripts/tests/: code_saturne_mesh_cube.sh  code_saturne_mesh_cube_measurement.sh  mpi_file_io.sh  openFOAM_VirgilioRe22Pr7_Perfomance.sh  openFOAM_VirgilioRe22Pr7_Perfomance_all_posix.sh  openFOAM_VirgilioRe22Pr7_Perfomance_measurement.sh  openFOAM_motorBike.sh  posix_file_io_random.sh  python_simple_write.sh  (+1 more)
libiotrace/src/: CMakeLists.txt  alloc.c  alloc.h  alloc_wrapper.h  atomic.h  atomic_buffer.c  atomic_buffer.h  atomic_buffer_write_once.c  atomic_buffer_write_once.h  atomic_memory_cache.c  atomic_memory_cache.h  debug.h  dl_io.c  dl_io.h  dl_io_wrapper.h  error.h  event.c  event.h  event_sim_wrapper.h  event_wrapper.h  fsalloc.c  gettime.c  gettime.h  io_file.c  io_file.h  io_log_file.c  io_log_file.h  json_defines.h  json_include_function.h  json_include_struct.h  json_structs.h  libiotrace.c  libiotrace_defines.h  libiotrace_defines_utils.c  libiotrace_defines_utils.h  libiotrace_functions.c  libiotrace_functions.h  libiotrace_include_function.h  libiotrace_include_struct.h  libiotrace_structs.h  (+16 more)
libiotrace/src/common/: compiler.h  debug.h  error.h  gettime.c  gettime.h  utils.c  utils.h
libiotrace/src/fnres/: fctevent.c  fctevent.h  fctnconsts.h  fevent.c  fevent.h  fnres.c  fnres.h
libiotrace/src/libs/: jsmn.h  line_protocol_parser.h
libiotrace/src/llhttp/: api.c  http.c  llhttp.c  llhttp.h
libiotrace/src/power_measurement/: defines.h
libiotrace/src/stracing/: CMakeLists.txt  TODOs  _test.h  debug.h  entrypoint.c  entrypoint.h
libiotrace/test/: CMakeLists.txt  MPI_immediate_test.c  MPI_parallel_IO_Posix.c  MPI_parallel_IO_single.c  MPI_parallel_IO_spearate.c  MPI_parallel_iread.c  MPI_parallel_read.c  MPI_power_rank_loop.c  MPI_read.c  MPI_seq_IO_Posix.c  OpenMP_atomic_buffer.c  OpenMP_atomic_buffer_races.c  OpenMP_atomic_buffer_write_once.c  OpenMP_atomic_memory_cache.c  OpenMP_atomic_memory_cache_measure.c  OpenMP_atomic_memory_cache_mixed.c  OpenMP_atomic_memory_cache_ordered.c  OpenMP_read_stream.c  alloc_trace.c  clone.c  dlsym.c  error.h  influxdb_mock.c  init_thread_test.c  mmap_io.c  mpi_file_io.c  mpi_file_io_2.c  mpi_file_io_random.c  mpi_file_io_sleep.c  mpi_random_file_io.c  multi_processes_threads_files.c  open_var_args  open_var_args.c  performance_test_script.sh  performance_test_script_atomic_buffer_cache.sh  performance_test_script_atomic_buffer_write_once.sh  pipe_ipc.c  read.c  read_MPI.c  read_async_byte.c  (+9 more)
libiotrace/test/common/: error.h
libiotrace/test/cunit/: CMakeLists.txt  test_alloc.c  test_fctevent.c  test_gettime.c  test_libiotrace_structs.c  test_utils.c  testing_fmap.c  testing_fnmap.c
libiotrace/test/internal/: CMakeLists.txt  atomic_add.c  atomic_add_thread.c  thread_test.h
libiotrace/test/stracing/: syscall_test.c  trace_descendants.c  trace_manual_syscall.c  trace_pthread_fork.c  unwind_manual_syscall.c
libiotrace/test/testscripts/: libiotracetest  mpi_file_io.sh  performance_test.sh  runsondbnode
(+486 files in other folders)
